--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,118 @@
-<p>home works!</p>
+
+<nav class="flex items-center justify-between flex-wrap bg-cyan-500 p-6">
+  <div class="flex items-center flex-shrink-0 text-white mr-6">
+    <a href="#" class="text-4xl font-bold text-white">Loc<i class="text-black">App</i> Locator</a>
+  </div>
+  <div class="block lg:hidden">
+    <button class="flex items-center px-3 py-2 border rounded text-teal-200 border-teal-400 hover:text-white hover:border-white">
+      <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
+    </button>
+  </div>
+  <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
+    <div class="text-sm lg:flex-grow flex">
+      <div class="relative group">
+        <button class="flex flex-row items-center px-4 text-base font-bold text-left uppercase bg-transparent rounded-lg md:w-auto md:inline md:mt-0 md:ml-4 focus:outline-none font-montserrat">
+            <span>Satellites</span>
+        </button>
+        <div class="absolute z-10 hidden bg-grey-200 group-hover:block">
+
+            <div class="px-2 pt-2 pb-4 bg-gray-200 shadow-lg flex flex-col">
+              <a href="#">All Satellites</a>
+              <a href="#">Visible Satellites</a>
+            </div>
+        </div>
+    </div>
+    <button class="flex flex-row items-center w-full px-4 text-base font-bold text-left uppercase bg-transparent rounded-lg md:w-auto md:inline md:mt-0 md:ml-4 focus:outline-none font-montserrat">
+      <span>Map</span>
+  </button>
+  <button class="flex flex-row items-center w-full px-4 text-base font-bold text-left uppercase bg-transparent rounded-lg md:w-auto md:inline md:mt-0 md:ml-4 focus:outline-none font-montserrat">
+    <span>Spy Stuff</span>
+</button>
+    </div>
+    <div>
+      <a href="#" class="inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white mt-4 lg:mt-0">Logout</a>
+    </div>
+  </div>
+</nav>
+<div class=" bg-indigo-50">
+
+  <div class="min-h-screen body-font text-gray-600 ">
+    <div class="container mx-auto px-5 py-10">
+      <div class="-m-4 flex flex-wrap gap-10">
+
+        <div class="w-full p-4 md:w-1/2 lg:w-1/4 bg-gray-300">
+
+          <div class="mt-4">
+            <h3 class="title-font mb-1 text-xs tracking-widest text-gray-500">PROJECT</h3>
+            <h2 class="title-font text-lg font-medium text-gray-900">Shooting Stars</h2>
+            <p class="mt-1">01/09/2022</p>
+          </div>
+        </div>
+        <div class="w-full p-4 md:w-1/2 lg:w-1/4 bg-gray-300">
+
+          <div class="mt-4">
+            <h3 class="title-font mb-1 text-xs tracking-widest text-gray-500">PROJECT</h3>
+            <h2 class="title-font text-lg font-medium text-gray-900">Shooting Stars</h2>
+            <p class="mt-1">01/09/2022</p>
+          </div>
+        </div>
+        <div class="w-full p-4 md:w-1/2 lg:w-1/4 bg-gray-300">
+
+          <div class="mt-4">
+            <h3 class="title-font mb-1 text-xs tracking-widest text-gray-500">PROJECT</h3>
+            <h2 class="title-font text-lg font-medium text-gray-900">Shooting Stars</h2>
+            <p class="mt-1">01/09/2022</p>
+          </div>
+        </div>
+        <div class="w-full p-4 md:w-1/2 lg:w-1/4 bg-gray-300">
+
+          <div class="mt-4">
+            <h3 class="title-font mb-1 text-xs tracking-widest text-gray-500">PROJECT</h3>
+            <h2 class="title-font text-lg font-medium text-gray-900">Shooting Stars</h2>
+            <p class="mt-1">01/09/2022</p>
+          </div>
+        </div>
+        <div class="w-full p-4 md:w-1/2 lg:w-1/4 bg-gray-300">
+
+          <div class="mt-4">
+            <h3 class="title-font mb-1 text-xs tracking-widest text-gray-500">PROJECT</h3>
+            <h2 class="title-font text-lg font-medium text-gray-900">Shooting Stars</h2>
+            <p class="mt-1">01/09/2022</p>
+          </div>
+        </div>
+        <div class="w-full p-4 md:w-1/2 lg:w-1/4 bg-gray-300">
+
+          <div class="mt-4">
+            <h3 class="title-font mb-1 text-xs tracking-widest text-gray-500">PROJECT</h3>
+            <h2 class="title-font text-lg font-medium text-gray-900">Shooting Stars</h2>
+            <p class="mt-1">01/09/2022</p>
+          </div>
+        </div>
+        <div class="w-full p-4 md:w-1/2 lg:w-1/4 bg-gray-300">
+
+          <div class="mt-4">
+            <h3 class="title-font mb-1 text-xs tracking-widest text-gray-500">PROJECT</h3>
+            <h2 class="title-font text-lg font-medium text-gray-900">Shooting Stars</h2>
+            <p class="mt-1">01/09/2022</p>
+          </div>
+        </div>
+        <div class="w-full p-4 md:w-1/2 lg:w-1/4 bg-gray-300">
+
+          <div class="mt-4">
+            <h3 class="title-font mb-1 text-xs tracking-widest text-gray-500">PROJECT</h3>
+            <h2 class="title-font text-lg font-medium text-gray-900">Shooting Stars</h2>
+            <p class="mt-1">01/09/2022</p>
+          </div>
+        </div>
+    </div>
+  </div>
+  <!-- Footer -->
+  <footer class="">
+    <p class="text-center  py-4 bg-white">Crafted by &copy; Obert</p>
+  </footer>
+</div>
+
+
+
+
+
